@@ -35,6 +35,7 @@ version 1.4.2
 8436							: stats-by-date messed up
 8438							: "next 100" and sorting
 8470							: read-only flag when comparing in OO
+8480							: log dialog resizing and splitter
 
 version 1.4.1
 7516							: bugtraq:message with only %BUGID% and bugtraq:number as true
